Fixed popup z-index
Also testing FTPloy for git hub publishing

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -257,6 +257,7 @@ hr { margin-bottom: 0; }
 		    text-align: center;
 		    padding: 10px;
 		    font-size: 11px;
+		    z-index: 4;
 		    top: 19px;
 		    position: absolute;
 			transform: translateX(-45px);
